chore: format code & use tabs for indentation